Java 21 for the win